--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						Shinchu, you've lived for
+						Gunj, you've lived for
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
@@ -53,7 +53,7 @@
 						We all love u forever and ever.<br/>
 						<span style="color:#FFFFFF">
 							<big>
-								Happy Birthday!
+								Happiest Birthday!
 							</big>
 						</span>
 						<br />
@@ -65,7 +65,7 @@
 			</div>
 		</div>
 		<div id="copyright">
-			Rearranged & remade by <a href="https://t.me/FallenAngel_xD">Oxy</a><br />Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />Firework by <a href="https://t.me/aboutoxy">@aboutoxy</a><br />Using Frame by <a href='http://hackerzhou.me'>hackerzhou.me</a>
+			Rearranged & remade by <a href="https://t.me/FallenAngel_xD">Oxy</a><br />Inspired by <a href="http://t.me/Like_road_straight_forward">Shinchu</a> Meri Budhhuuu.<br />Made For <a href="https://t.me/Like_road_straight_forward">@Like_road_straight_forward</a><br />Happiest Birthday <a href='http://t.me/Like_road_straight_forward'>You're My Favourite</a>
 		</div>
 	</div>
 </div>
