--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						Gunj, you've lived for
+						Happiest birthday Gunj 
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
