--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						We all love u forever and ever.<br/>
 						<span style="color:#FFFFFF">
 							<big>
-								Happiest Birthday!
+								Happiest Birthday Budhhu!
 							</big>
 						</span>
 						<br />
