--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						Happiest birthday Pooja 
+						Happiest birthday Shivanshu 
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						Long live meri buddhhhuuu, <br />
+						Long live mere bhai, <br />
 						We all love u forever and ever.<br/>
 						<span style="color:#FFFFFF">
 							<big>
@@ -58,14 +58,14 @@
 						</span>
 						<br />
 						<div class="signature">
-							- Oxy Fattu
+							- Jay
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div id="copyright">
-			Rearranged & remade by <a href="https://t.me/FallenAngel_xD">Oxy</a><br />Inspired by <a href="http://t.me/Like_road_straight_forward">Shinchu</a> Meri Budhhuuu.<br />Made For <a href="https://t.me/Like_road_straight_forward">@Like_road_straight_forward</a><br />Happiest Birthday <a href='http://t.me/Like_road_straight_forward'>You're My Favourite</a>
+			Rearranged & remade by <a href="https://t.me/FallenAngel_xD">Oxy</a><br />Inspired by <a href="http://t.me/Da_soul">Shivanshu</a> Mere bhai.<br />Made For <a href="https://t.me/Da_soul">@Da_soul</a><br />Happiest Birthday <a href='http://t.me/Da_soul'>You're My Favourite</a>
 		</div>
 	</div>
 </div>
